--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,15 +4,15 @@
 
   .intro {
 
+    img
     h2 {
       padding: 15px;
-    }
+    } // h2
 
     p {
       padding:0 15px;
-    }
-  
-  }
+    } // paragraph
+  } // .intro
 
   .space-images {
     display: flex;
