--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,24 @@
 // Navigation code here
+header {
+  background-color: #f4f4f4;
+  padding: 2%;
+  
+  h1 {
+    text-align: center;
+    font-size: 4rem;
+    margin-bottom: 2%;
+  } // this closes h1
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    width: 45%;
+    margin: 0 auto;
+    
+    a {
+      text-decoration: none;
+      font-size: 1.5rem;
+      color: black;
+    } // this closes anchor
+  } // this closes nav
+} // this closes header
