--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 // Navigation code here
 header {
   background-color: #f4f4f4;
-  padding: 2%;
+  padding: 1%;
   
   h1 {
     text-align: center;
@@ -11,13 +11,13 @@ header {
 
   nav {
     display: flex;
-    justify-content: space-between;
-    width: 45%;
+    justify-content: space-evenly;
+    width: 35%;
     margin: 0 auto;
-    
+
     a {
       text-decoration: none;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       color: black;
     } // this closes anchor
   } // this closes nav
