--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,11 @@
+.flex {
+  display: flex;
+}
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -161,8 +169,13 @@ p {
   margin: 0 auto;
 }
 header {
-  background-color: #f4f4f4;
+  background-color: #F6F6F6;
   padding: 1%;
+}
+@media (max-width: 500px) {
+  header {
+    width: 100%;
+  }
 }
 header h1 {
   text-align: center;
