--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,16 @@
 // Mixins Here
+.flex {
+  display: flex;
+}
+.flex-column {
+  .flex();
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+// Parametric mixin
+.flex-row(@justify) {
+  .flex();
+  justify-content: @justify;
+} 
