--- a/less/home-page.less
+++ b/less/home-page.less
@@ -55,15 +55,16 @@
 
       h3 {
         margin-bottom: 10px;
-      }
+      } // h3
 
       p {
         margin-bottom: 26px;
-      }
+      } // paragraph
 
       .btn {
+        .button(white, @btn-bg-color, 25%, 0.5rem, 3%, center, 1.5rem);
       }
-    }
+    } // .walk-text
 
     .walk-img {
       width: 46%;
