--- a/css/index.css
+++ b/css/index.css
@@ -156,12 +156,22 @@ h5 {
 h2 {
   font-size: 3.2rem;
 }
+@media (max-width: 500px) {
+  h2 {
+    font-size: 2.5rem;
+  }
+}
 h3 {
   font-size: 2.8rem;
 }
 p {
   font-size: 1.6rem;
   line-height: 1.4;
+}
+@media (max-width: 500px) {
+  p {
+    font-size: 0.5rem;
+  }
 }
 .container {
   max-width: 800px;
@@ -175,6 +185,7 @@ header {
 @media (max-width: 500px) {
   header {
     width: 100%;
+    padding: 4%;
   }
 }
 header h1 {
@@ -182,16 +193,34 @@ header h1 {
   font-size: 4rem;
   margin-bottom: 2%;
 }
+@media (max-width: 500px) {
+  header h1 {
+    font-size: 2.5rem;
+    margin-bottom: 4%;
+  }
+}
 header nav {
   display: flex;
   justify-content: space-evenly;
   width: 35%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  header nav {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+  }
+}
 header nav a {
   text-decoration: none;
   font-size: 1.8rem;
-  color: black;
+  color: #23293B;
+}
+@media (max-width: 500px) {
+  header nav a {
+    font-size: 1rem;
+  }
 }
 footer {
   color: #22283B;
@@ -204,7 +233,13 @@ footer {
   align-items: center;
 }
 .home .intro img {
+  width: 100%;
   margin-bottom: 2%;
+}
+@media (max-width: 500px) {
+  .home .intro img {
+    border-radius: 0.5rem;
+  }
 }
 .home .intro h2 {
   padding: 15px;
