--- a/less/global.less
+++ b/less/global.less
@@ -19,7 +19,11 @@ h1, h2, h3, h4, h5 {
 
 h2 {
   font-size: 3.2rem;
-}
+
+  @media @phone {
+    font-size: 2.5rem;
+  } // this closes media query
+} // this closes h2
 
 h3 {
   font-size: 2.8rem;
@@ -28,7 +32,11 @@ h3 {
 p {
   font-size: 1.6rem;
   line-height: 1.4;
-}
+
+  @media @phone {
+    font-size: 0.5rem;
+  } // this closes media query
+} // this closes paragraph
 
 .container {
   max-width: 800px;
