--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,8 +5,12 @@
   .intro {
 
     img {
-      margin-bottom: 2%;
+      width: 100%;
+      margin-bottom: 2%; 
 
+      @media @phone {
+        border-radius: 0.5rem;
+      } // this closes media query
     } // img
     
     h2 {
