--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,12 +5,18 @@ header {
 
   @media @phone {
     width: 100%;
+    padding: 4%;
   } // this closes media query
   
   h1 {
     text-align: center;
     font-size: 4rem;
     margin-bottom: 2%;
+
+    @media @phone {
+      font-size: 2.5rem;
+      margin-bottom: 4%;
+    } // this closes media query
   } // this closes h1
 
   nav {
@@ -18,10 +24,19 @@ header {
     width: 35%;
     margin: 0 auto;
 
+    @media @phone {
+      width: 80%;
+      .flex-row(space-between);
+    } // this closes media query
+
     a {
       text-decoration: none;
       font-size: 1.8rem;
-      color: black;
+      color: @header-font-color;
+
+      @media @phone {
+        font-size: 1rem;
+      } // this closes media query
     } // this closes anchor
   } // this closes nav
 } // this closes header
