lift off section done

--- a/less/global.less
+++ b/less/global.less
@@ -27,7 +27,11 @@ h2 {
 
 h3 {
   font-size: 2.8rem;
-}
+
+  @media @phone {
+    font-size: 2.2rem;
+  } // this closes media query
+} // this closes h3
 
 p {
   font-size: 1.6rem;
