--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,11 @@ h2 {
 h3 {
   font-size: 2.8rem;
 }
+@media (max-width: 500px) {
+  h3 {
+    font-size: 2.2rem;
+  }
+}
 p {
   font-size: 1.6rem;
   line-height: 1.4;
@@ -257,6 +262,21 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
