--- a/css/index.css
+++ b/css/index.css
@@ -294,14 +294,32 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    margin-top: 2%;
+    padding: 4%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    margin: 4% 0;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text p {
+    margin: 4% 0;
+  }
 }
 .home .walk .walk-text .btn {
   color: white;
@@ -316,9 +334,30 @@ footer {
   color: #22283A;
   background-color: white;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    color: white;
+    background-color: #22283A;
+    width: 100%;
+    border-radius: 0.5rem;
+    padding: 4%;
+    text-align: center;
+    font-size: 1.2rem;
+  }
+  .home .walk .walk-text .btn:hover {
+    color: #22283A;
+    background-color: white;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin-left: 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
