--- a/less/home-page.less
+++ b/less/home-page.less
@@ -70,8 +70,20 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      flex-direction: column-reverse;
+      margin-top: 2%;
+      padding: 4%;
+    } // this closes media query
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+        margin: 4% 0;
+        // padding: 0 2%;
+      } // this closes media query
 
       h3 {
         margin-bottom: 10px;
@@ -79,16 +91,29 @@
 
       p {
         margin-bottom: 26px;
+
+        @media @phone {
+          margin: 4% 0;
+        } // this closes media query
       } // paragraph
 
       .btn {
         .button(white, @btn-bg-color, 25%, 0.5rem, 3%, center, 1.5rem);
-      }
+      
+        @media @phone {
+          .button(white, @btn-bg-color, 100%, 0.5rem, 4%, center, 1.2rem);
+        } // this closes media query
+      } // this close .btn
     } // .walk-text
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin-left: 0;
+      } // this closes media query
       
       img {
         width: 100%;
