--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,10 @@
 header {
   background-color: @nav-bg;
   padding: 1%;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.8;
 
   @media @phone {
     width: 100%;
